Shang New Live/src/objects/Permission_Set__c.object
<CustomObject>
    <description>to manage the access control for operation iOS users.</description>
    <fields>
        <fullName>Accessible_Checklist__c</fullName>
        <label>Accessible Checklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accessible_Daily_Cheklist__c</fullName>
        <label>Accessible Daily Cheklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Daily_Checklist_Item</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Module</label>
        <referenceTo>Mobile_Module__c</referenceTo>
        <relationshipLabel>Permission Sets</relationshipLabel>
        <relationshipName>Permission_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Operation Assignment</relationshipLabel>
        <relationshipName>Operation_Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_N__c</fullName>
        <formula>Mobile_Module__r.S_N__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S/N</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Permission Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Mobile_Module__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Permission Set No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Sets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>